--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "ejs": "^2.5.9",
     "express": "^4.16.3",
-    "body-parser": "1.18.2"
+    "body-parser": "1.18.2",
+    "mongodb": "3.0.7",
+    "sha1": "1.1.1"
   }
 }
